# AI-Code-Review

./: ### `.env  .gitignore  README.md  pyproject.toml
### `git-code-review/: config.py
ai-code-review/: config.py  lambda_handler.py  test_main.py
git-code-review/: config.py  github_client.py  main.py  openai_client.py  test_main.py  utils.py
