[tool.poetry]
name = "git-code-review"
version = "0.1.0"
description = ""
authors = ["AJ <naqibprio10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.45.0"
requests = "^2.32.3"
poetry-plugin-dotenv = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.dotenv]
location = ".env.dev"